--- a/module_apis/src/main/res/layout/apis_activity_half_scroll.xml
+++ b/module_apis/src/main/res/layout/apis_activity_half_scroll.xml
@@ -8,11 +8,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/i_tb_half_scroll"
+            layout="@layout/apis_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/v_top"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="#5f00"
+            app:layout_constraintTop_toBottomOf="@+id/i_tb_half_scroll"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
