--- a/module_api/src/main/res/layout/api_activity_vibrator_camera.xml
+++ b/module_api/src/main/res/layout/api_activity_vibrator_camera.xml
@@ -96,6 +96,13 @@
             android:layout_width="match_parent"
             android:text="水印" />
 
+        <Button
+            android:id="@+id/bt2camerax"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="camerax"
+            android:textAllCaps="false" />
+
         <ImageView
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
