--- a/module_pj_iflytek/src/main/res/layout/apis_iflytek_activity_amap.xml
+++ b/module_pj_iflytek/src/main/res/layout/apis_iflytek_activity_amap.xml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="48dp">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/btFinish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="10dp">
+        android:layout_marginTop="40dp"
+        android:text="返回" />
 
+    <CheckBox
+        android:id="@+id/cbIsOnce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="是否一次定位" />
 
-        <Button
-            android:id="@+id/bt_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="开始定位" />
+    <Button
+        android:id="@+id/btStartLoc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="开始定位" />
 
-        <TextView
-            android:id="@+id/tv_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!" />
+    <Button
+        android:id="@+id/btStopLoc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="停止定位" />
 
+    <TextView
+        android:id="@+id/tvLoc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
 
-        <EditText
-            android:id="@+id/etLocation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="输入地点关建词" />
+    <TextView
+        android:id="@+id/tvPoi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp" />
 
-        <Button
-            android:id="@+id/btSearch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="搜索位置列表" />
-
-
-        <TextView
-            android:id="@+id/tvPoiResult"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
