--- a/module_api/src/main/res/layout/api_activity_app_info.xml
+++ b/module_api/src/main/res/layout/api_activity_app_info.xml
@@ -38,12 +38,14 @@
                 android:layout_height="wrap_content"
                 app:item_line="true"
                 app:item_title="设备sn" />
+
             <cc.catface.ctool.view.listview.TempItem
                 android:id="@+id/tiMEID"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:item_line="true"
                 app:item_title="设备meid" />
+
             <cc.catface.ctool.view.listview.TempItem
                 android:id="@+id/tiIMEI"
                 android:layout_width="match_parent"
@@ -159,6 +161,13 @@
                 android:layout_height="wrap_content"
                 app:item_line="false"
                 app:item_title="screen_height" />
+
+            <cc.catface.ctool.view.listview.TempItem
+                android:id="@+id/tiHeapSize"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:item_line="false"
+                app:item_title="heap size" />
         </LinearLayout>
     </ScrollView>
 </layout>
