--- a/module_start/src/main/res/layout/start_activity_ad.xml
+++ b/module_start/src/main/res/layout/start_activity_ad.xml
@@ -42,21 +42,23 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="240dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/shape_tv_bg_default"
             android:text="广告"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_ad"
-            app:layout_constraintTop_toTopOf="@+id/iv_ad" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
-            android:background="@mipmap/ic_launcher"
+            android:background="@mipmap/ic_launcher_round"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -67,7 +69,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="从简·听从你心"
-            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
             app:layout_constraintLeft_toRightOf="@+id/imageView"
             app:layout_constraintRight_toRightOf="parent"
