--- a/module_start/src/main/res/values/styles.xml
+++ b/module_start/src/main/res/values/styles.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="AppTheme.Launcher">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@drawable/bg_login</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
     <!-- 默认按钮 -->
     <style name="bt_default">
         <item name="android:layout_width">wrap_content</item>
