--- a/demo_provider/app_provider_provider/src/main/res/layout/item_user.xml
+++ b/demo_provider/app_provider_provider/src/main/res/layout/item_user.xml
@@ -19,7 +19,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/blue500"
+            android:background="#0af"
             app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
