--- a/module_api/src/main/res/layout/api_fm_demo_small_func.xml
+++ b/module_api/src/main/res/layout/api_fm_demo_small_func.xml
@@ -15,6 +15,34 @@
             android:layout_height="wrap_content"
             android:text="防抖按钮(1s内只响应第一次点击)" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/etIp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:hint="ip"
+                android:text="www.baidu.com" />
+
+            <Button
+                android:id="@+id/btPingIp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="测试" />
+
+            <TextView
+                android:id="@+id/tvPingResult"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="result" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </layout>
